--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Rubik", sans-serif;
+	
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+	background-color: #f6f3ff;
+	width: 100%;
+}
+
+
+a{
+	text-decoration: none;
+}
+
+.border{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+
+	border-left: 50px solid #ffffff;
+	border-right: 50px solid #ffffff;
+}
+
+main{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+
+.Dropdown-Mobile{
+	display: none;
+}
+
+@media screen and (max-width: 565px) {
+	.Dropdown-Mobile{
+		display: flex;
+	}
+}
+
+.Lado-azul{
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	width: 50%;
+	height: 100vh;
+
+	font-size: 60px;
+
+	color: #efeaff;
+	background-color: #00001b;
+}
+
+.Lado-white{
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	width: 50%;
+	height: 100vh;
+
+	font-size: 60px;
+
+	color: #00001b;
+	background-color: #efeaff;
 }
